<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ViewUserInfoActivity" >

    <include
        android:id="@+id/topnav"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        layout="@layout/inc_topnav_main" />

    <Button
        android:id="@+id/editUserInfoButton"
        style="@style/MediumWhiteText"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_selector"
        android:drawableLeft="@drawable/ic_action_edit"
        android:textAlignment="center"
        android:gravity="center"
        android:onClick="editUserInfo"
        android:text=""
         />

    <ScrollView
        android:id="@+id/viewUserInfoScroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/editUserInfoButton"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/topnav"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <LinearLayout
            android:id="@+id/viewDataUserHeadingLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/userDetailsHeading"
                style="@style/LargeWhiteText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_details" />

            <LinearLayout
                android:id="@+id/viewDataUserInfoName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/userNameViewTextView"
                    style="@style/MediumWhiteText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:text="@string/name" />

                <TextView
                    android:id="@+id/userNameView1"
                    style="@style/MediumWhiteText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.5" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/viewDataUserInfoAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/userAddressViewTextView"
                    style="@style/MediumWhiteText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:text="@string/address" />

                <TextView
                    android:id="@+id/userAddressView1"
                    style="@style/MediumWhiteText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.5" />
            </LinearLayout>

            <TextView
                android:id="@+id/careTakerDetailsHeading"
                style="@style/LargeWhiteText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/title_activity_care_takers_info_layout" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" >

                <TextView
                    android:id="@+id/careTaker1NameView1"
                    style="@style/MediumWhiteText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5" />

                <TextView
                    android:id="@+id/careTaker1PhoneView1"
                    style="@style/MediumWhiteText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.5" />

                <Button
                    android:id="@+id/careTaker1Call1"
                    style="@style/MediumWhiteText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    
                    android:background="@drawable/ic_action_call"
                    android:onClick="careTaker1Call"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" >

                <TextView
                    android:id="@+id/careTaker2NameView1"
                    style="@style/MediumWhiteText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5" />

                <TextView
                    android:id="@+id/careTaker2PhoneView1"
                    style="@style/MediumWhiteText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.5" />

                <Button
                    android:id="@+id/careTaker2Call1"
                    style="@style/MediumWhiteText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    
                    android:background="@drawable/ic_action_call"
                    android:onClick="careTaker2Call"
                    android:text="" />
            </LinearLayout>

            <TextView
                android:id="@+id/MedicinalDetailsHeading"
                style="@style/LargeWhiteText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/title_activity_medicinal_details" />

            <TextView
                android:id="@+id/MedicinalDetailsView1"
                style="@style/MediumWhiteText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/EmergencyHelpHeading"
                style="@style/LargeWhiteText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/emergency_help" />

            <TextView
                android:id="@+id/EmergencyHelpView1"
                style="@style/MediumWhiteText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>