<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".EmergencyTriggeredActivity" >

    <include
        android:id="@+id/topnav"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        layout="@layout/inc_topnav_main" />

    <Button
        android:id="@+id/helpButton"
        style="@style/MediumWhiteText"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/red_emergency_button"
        android:onClick="cancelButtonClick"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/silentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/helpButton"
        android:layout_alignBottom="@id/helpButton"
        android:layout_marginRight="20dp"
        android:layout_toLeftOf="@id/helpButton"
        android:background="@drawable/ic_action_volume_muted"
        android:onClick="silent"
        android:visibility="visible" />

    <Button
        android:id="@+id/sosCallButton"
        style="@style/MediumWhiteText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/helpButton"
        android:layout_alignBottom="@id/helpButton"
        android:layout_toRightOf="@id/helpButton"
        android:layout_marginLeft="20dp"
        android:background="@drawable/button_selector"
        android:drawableLeft="@drawable/ic_action_call"
        android:drawablePadding="0dp"
        android:onClick="sosCall"
        android:text="911" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/helpButton"
        android:layout_below="@id/topnav"
        android:layout_centerHorizontal="true"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                style="@style/LargeWhiteText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/title_activity_care_takers_info_layout" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" >

                <TextView
                    android:id="@+id/careTaker1NameView"
                    style="@style/MediumWhiteText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5" />

                <TextView
                    android:id="@+id/careTaker1PhoneView"
                    style="@style/MediumWhiteText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.5" />

                <Button
                    android:id="@+id/careTaker1Call"
                    style="@style/MediumWhiteText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    
                    android:background="@drawable/ic_action_call"
                    android:onClick="callCareTaker1"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" >

                <TextView
                    android:id="@+id/careTaker2NameView"
                    style="@style/MediumWhiteText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5" />

                <TextView
                    android:id="@+id/careTaker2PhoneView"
                    style="@style/MediumWhiteText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.5" />

                <Button
                    android:id="@+id/careTaker2Call"
                    style="@style/MediumWhiteText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    
                    android:background="@drawable/ic_action_call"
                    android:onClick="callCareTaker2"
                    android:text="" />
            </LinearLayout>

            <TextView
                android:id="@+id/medsHeading"
                style="@style/LargeWhiteText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/title_activity_medicinal_details" />

            <TextView
                android:id="@+id/medicinalDetailsView"
                style="@style/MediumWhiteText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/emerHelpHeading"
                style="@style/LargeWhiteText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/title_activity_emergency_help" />

            <TextView
                android:id="@+id/emergencyHelpView"
                style="@style/MediumWhiteText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>