<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="10dp"
    tools:context=".CareTakersInformationActivity" >

    <include
        android:id="@+id/topnav"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        layout="@layout/inc_topnav_main" />

    <Button
        android:id="@+id/careTakerInfoNextButton"
        style="@style/MediumWhiteText"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:drawableTop="@drawable/ic_action_next_item"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_selector"
        android:onClick="nextCareTakers"
        android:text="" />

    <ScrollView
        android:id="@+id/editCareTakerScroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/careTakerInfoNextButton"
        android:layout_below="@id/topnav"
        android:layout_centerHorizontal="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                style="@style/LargeWhiteText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/care_taker_one" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="20dp" >

                <TextView
                    style="@style/MediumWhiteText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1.5"
                    android:gravity="left"
                    android:text="@string/name" />

                <EditText
                    android:id="@+id/careTakerNameText1"
                    style="@style/MediumWhiteText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.5"
                    android:background="@null"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="20dp" >

                <TextView
                    style="@style/MediumWhiteText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1.5"
                    android:gravity="left"
                    android:text="@string/phone" />

                <EditText
                    android:id="@+id/careTakerPhoneText1"
                    style="@style/MediumWhiteText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.5"
                    android:background="@null"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:singleLine="true" />
            </LinearLayout>

            <TextView
                style="@style/LargeWhiteText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/care_taker_two" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="20dp" >

                <TextView
                    style="@style/MediumWhiteText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1.5"
                    android:gravity="left"
                    android:text="@string/name" />

                <EditText
                    android:id="@+id/careTakerNameText2"
                    style="@style/MediumWhiteText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.5"
                    android:background="@null"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName" 
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="20dp" >

                <TextView
                    style="@style/MediumWhiteText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1.5"
                    android:gravity="left"
                    android:text="@string/phone" />

                <EditText
                    android:id="@+id/careTakerPhoneText2"
                    style="@style/MediumWhiteText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.5"
                    android:background="@null"
                    android:imeOptions="actionDone"
                    android:inputType="phone"
                    android:singleLine="true" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>